# timesync_tester

./: CMakeLists.txt  README.md  package.xml
launch/: start_client_windows.cmd  test.launch
msg/: ResultMsg.msg  TimeMsg.msg
src/: timesync_client.cpp  timesync_server.cpp
