<?xml version="1.0"?>
<package>
    <name>timesync_tester</name>
    <version>0.0.0</version>
    <description>copilot</description>
    
    <maintainer email="matfaessler@gmail.com">Matthias Fässler</maintainer>
    <maintainer email="fly.fontana@gmail.com">Flavio Fontana</maintainer>
    <license>GNU GPL</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>
    
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    
	<run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>

    <export>
        
    </export>
</package>
